--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="it-IT">
 <head>
+    <!--bootstrap 5.3.3-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <!--bootstrap 5.3.3-->
     <!--outfit font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +22,19 @@
 
     </header>
     <main>
-        <form action="record.php" method="post">
-            <label for="nome">Nome: </label>
-            <input type="text" name="nome" placeholder="Inserisci il nome" id="nome">
-            <label for="cognome">Cognome: </label>
-            <input type="text" name="cognome" placeholder="Inserisci il cognome" id="cognome">
-            <label for="mail">Email: </label>
-            <input type="mail" name="mail" placeholder="Inserisci la mail" id="mail">
-            <input type="submit" name="invia" id="invia">
-        </form>
+        <section class="container mw-75 mx-auto">
+            <div class="row">
+                <form action="record.php" method="post">
+                    <label for="nome">Nome: </label>
+                    <input type="text" name="nome" placeholder="Inserisci il nome" id="nome">
+                    <label for="cognome">Cognome: </label>
+                    <input type="text" name="cognome" placeholder="Inserisci il cognome" id="cognome">
+                    <label for="mail">Email: </label>
+                    <input type="mail" name="mail" placeholder="Inserisci la mail" id="mail">
+                    <input type="submit" name="invia" id="invia">
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
 
