ultima modifica form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     </header>
     <main>
-        <section class="container mw-75 mx-auto">
+        <section class="container mw-75 mx-auto" id="form">
+            <div class="row">
+                <h1>Iscriviti al nostro form</h1>
+            </div>
             <div class="row">
                 <form action="record.php" method="post">
                     <label for="nome">Nome: </label>
